make matrix utility a bit more compact